--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@react-navigation/stack": "^6.0.9",
     "react": "17.0.2",
     "react-native": "0.66.0",
+    "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
-    "react-native-splash-screen": "^3.2.0"
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
