--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "@react-navigation/stack": "^6.0.9",
+    "@types/lodash.get": "^4.4.6",
+    "lodash.get": "^4.4.2",
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-feather": "^1.1.2",
