Install patch-package

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "react-native start",
     "xcode": "xed -b ios",
     "test": "jest",
+    "postinstall": "patch-package",
     "clean:ios": "xcodebuild clean -workspace ./ios/nativeapp.xcworkspace -scheme nativeapp",
     "repod": "cd ios; pod deintegrate; pod install",
     "clean": "yarn clean:ios; yarn repod",
@@ -20,6 +21,8 @@
     "@react-navigation/stack": "^6.0.9",
     "@types/lodash.get": "^4.4.6",
     "lodash.get": "^4.4.2",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-feather": "^1.1.2",
