--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "17.0.2",
     "react-native": "0.66.0",
+    "react-native-encrypted-storage": "^4.0.2",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
