--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@react-navigation/native-stack": "^6.2.2",
     "@react-navigation/stack": "^6.0.9",
     "@types/lodash.get": "^4.4.6",
+    "@types/lodash.omit": "^4.5.6",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "lodash.get": "^4.4.2",
+    "lodash.omit": "^4.5.0",
     "meta1dex": "^0.6.13",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
