--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "meta1dex": "^0.6.13",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
+    "qrcode": "^1.4.4",
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-encrypted-storage": "^4.0.2",
@@ -51,6 +52,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/qrcode": "^1.4.1",
     "@types/react-native": "^0.65.0",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
