--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@react-navigation/stack": "^6.0.9",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.omit": "^4.5.6",
+    "@types/lodash.throttle": "^4.1.6",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "is_js": "^0.9.0",
     "lodash.get": "^4.4.2",
     "lodash.omit": "^4.5.0",
+    "lodash.throttle": "^4.1.1",
     "meta1dex": "^0.6.13",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
