--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-text-input-mask": "^3.1.4",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.14.2",
     "stream-browserify": "^3.0.0",
     "zustand": "^3.5.13"
   },
