--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-paper": "^4.9.2",
+    "react-native-prompt-android": "^1.1.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-splash-screen": "^3.2.0",
