--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.omit": "^4.5.6",
     "@types/lodash.throttle": "^4.1.6",
+    "@types/react-native-svg-charts": "^5.0.12",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
@@ -47,6 +48,7 @@
     "react-native-screens": "^3.8.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.1",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-text-input-mask": "^3.1.4",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.14.2",
