--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.omit": "^4.5.6",
     "@types/lodash.throttle": "^4.1.6",
+    "@types/lodash.zip": "^4.2.6",
+    "@types/lodash.zipobject": "^4.1.6",
     "@types/react-native-svg-charts": "^5.0.12",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
@@ -33,6 +35,8 @@
     "lodash.get": "^4.4.2",
     "lodash.omit": "^4.5.0",
     "lodash.throttle": "^4.1.1",
+    "lodash.zip": "^4.2.0",
+    "lodash.zipobject": "^4.1.3",
     "meta1dex": "^0.6.13",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
