--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "react-native start",
     "xcode": "xed -b ios",
     "test": "jest",
-    "postinstall": "patch-package",
+    "postinstall": "patch-package; buildChart.sh",
+    "buildChart": "./buildChart.sh",
     "clean:ios": "xcodebuild clean -workspace ./ios/nativeapp.xcworkspace -scheme nativeapp",
     "repod": "cd ios; pod deintegrate; pod install",
     "clean": "yarn clean:ios; yarn repod",
