Update eslint config

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "react-native start",
     "xcode": "xed -b ios",
     "test": "jest",
-    "postinstall": "patch-package; buildChart.sh",
-    "buildChart": "./buildChart.sh",
+    "postinstall": "patch-package; yarn buildChart",
+    "buildChart": "$(git rev-parse --show-toplevel)/buildChart.sh",
     "clean:ios": "xcodebuild clean -workspace ./ios/nativeapp.xcworkspace -scheme nativeapp",
     "repod": "cd ios; pod deintegrate; pod install",
     "clean": "yarn clean:ios; yarn repod",
@@ -66,7 +66,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-config": "^3.0.0",
     "@types/jest": "^26.0.23",
     "@types/qrcode": "^1.4.1",
     "@types/react-native": "^0.65.0",
