--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-inappbrowser-reborn": "^3.6.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-paper": "^4.9.2",
     "react-native-prompt-android": "^1.1.0",
