Add react-native yarn cmd
TLDR: This is wrong, and i am probalby to blame
This is done as a temporary solution for currenty (01/10/22) partialy broken
react-native-cli global installation

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clean:ios": "xcodebuild clean -workspace ./ios/nativeapp.xcworkspace -scheme nativeapp",
     "repod": "cd ios; pod deintegrate; pod install",
     "clean": "yarn clean:ios; yarn repod",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "react-native": "react-native"
   },
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.9.0",
