--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "react-native start",
     "xcode": "xed -b ios",
     "test": "jest",
+    "build": "yarn build:android && yarn build:ios",
+    "build:ios": "./buildIOSRelease.sh",
+    "build:android": "./buildApkRelease.sh",
     "postinstall": "patch-package; yarn buildChart",
     "buildChart": "$(git rev-parse --show-toplevel)/buildChart.sh",
     "clean:ios": "xcodebuild clean -workspace ./ios/nativeapp.xcworkspace -scheme nativeapp",
