--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "@react-navigation/stack": "^6.0.9",
+    "@sentry/react-native": "^3.2.13",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.omit": "^4.5.6",
     "@types/lodash.throttle": "^4.1.6",
