--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativeapp",
-  "version": "0.1.1",
+  "version": "1.0.4",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -18,7 +18,8 @@
     "repod": "cd ios; pod deintegrate; pod install",
     "clean": "yarn clean:ios; yarn repod",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "react-native": "react-native"
+    "react-native": "react-native",
+    "bump": "GIT_HEAD=$(git rev-parse --short HEAD) bundle exec fastlane bump" 
   },
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.9.0",
