--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
   package="com.nativeapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <!-- FIXME: usesCleartextTraffic should be removed as soon as we setup a proper domain -->
     <application
+      android:usesCleartextTraffic="true"
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
