--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/lodash.throttle": "^4.1.6",
     "@types/lodash.zip": "^4.2.6",
     "@types/lodash.zipobject": "^4.1.6",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-svg-charts": "^5.0.12",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
@@ -46,11 +47,13 @@
     "lodash.zip": "^4.2.0",
     "lodash.zipobject": "^4.1.3",
     "meta1dex": "^0.6.13",
+    "meta1dex-testnet": "^0.6.14",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "qrcode": "^1.4.4",
     "react": "17.0.2",
     "react-native": "0.66.0",
+    "react-native-dotenv": "^3.3.1",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^1.10.3",
