--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "clean": "yarn clean:android; yarn clean:ios; yarn repod",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "react-native": "react-native",
-    "bump": "GIT_HEAD=$(git rev-parse --short HEAD) bundle exec fastlane bump",
-    "bump:testnet": "GIT_HEAD=$(git rev-parse --short HEAD)-testnet bundle exec fastlane bump",
+    "bump": "GIT_HEAD=+$(git rev-parse --short HEAD) bundle exec fastlane bump",
+    "bump:testnet": "GIT_HEAD=+$(git rev-parse --short HEAD)-testnet bundle exec fastlane bump",
     "build:testnet": "yarn bump:testnet && yarn clean && yarn testnet:android && yarn testnet:ios && git reset --hard HEAD",
     "testnet:android": "NETWORK=TESTNET ./buildApkRelease.sh",
     "testnet:ios": "export NETWORK=TESTNET; yarn build:ios"
