--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "testnet:ios": "export NETWORK=TESTNET; yarn build:ios"
   },
   "dependencies": {
+    "@babel/plugin-transform-arrow-functions": "^7.16.7",
+    "@babel/plugin-transform-shorthand-properties": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@react-native-clipboard/clipboard": "^1.9.0",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -48,6 +51,10 @@
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-svg-charts": "^5.0.12",
     "assert": "^2.0.0",
+    "babel-plugin-polyfill-corejs2": "^0.3.1",
+    "babel-plugin-polyfill-corejs3": "^0.5.2",
+    "babel-plugin-polyfill-es-shims": "^0.6.1",
+    "babel-plugin-polyfill-regenerator": "^0.3.1",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "is_js": "^0.9.0",
@@ -66,12 +73,12 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-feather": "^1.1.2",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "^2.3.2",
     "react-native-inappbrowser-reborn": "^3.6.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-paper": "^4.9.2",
     "react-native-prompt-android": "^1.1.0",
-    "react-native-reanimated": "^2.2.4",
+    "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-splash-screen": "^3.2.0",
@@ -84,7 +91,7 @@
     "zustand": "^3.5.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.17.8",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^3.0.0",
     "@types/jest": "^27.4.1",
