--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-native-paper": "^4.9.2",
     "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "^2.5.0",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-splash-screen": "^3.2.0",
