--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,6 +81,10 @@ project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
 ]
 
+project.ext.reanimated = [
+  buildFromSource: true // clean and rebuild if changing
+]
+
 apply from: "../../node_modules/react-native/react.gradle"
 
 /**
