--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -165,6 +165,7 @@ android {
                     abiFilters nativeArchitectures.split(',')
                 }
             }
+            debuggable true
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
