--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-image-picker": "^4.7.3",
     "react-native-inappbrowser-reborn": "^3.6.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-paper": "^4.9.2",
