--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native-blob-util": "^0.15.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-encrypted-storage": "^4.0.2",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-image-picker": "^4.7.3",
