--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "xcode": "xed -b ios",
     "test": "jest",
     "build": "yarn build:android && yarn build:ios",
-    "build:ios": "cd ios && xcodebuild -workspace nativeapp.xcworkspace -configuration Release -scheme nativeapp archive",
+    "build:ios": "./buildIOSRelease.sh",
     "build:android": "./buildApkRelease.sh",
     "postinstall": "patch-package; yarn buildChart",
     "buildChart": "$(git rev-parse --show-toplevel)/buildChart.sh",
