--- a/package.json
+++ b/package.json
@@ -102,13 +102,14 @@
     "@types/qrcode": "^1.4.1",
     "@types/react-native": "^0.65.0",
     "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^4.7.3"
   },
   "resolutions": {
     "@types/react": "^17"
