--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "qrcode": "^1.4.4",
     "react": "17.0.2",
     "react-native": "0.66.0",
-    "react-native-blob-util": "^0.15.0",
+    "react-native-blob-util": "0.16.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-exception-handler": "^2.10.10",
