--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -8,10 +8,15 @@ jobs:
       - name: Install npm dependencies
         run: |
           yarn install
-      - name: Install bundler and fastlane
+      - name: Install ruby dependencies
         run: |
+          sudo get install cocoapods
           sudo gem install bundler
           bundle install
+      - name: Install pod dependencies
+        run: |
+          cd ios
+          pod install
       - name: Build and upload to Diawi
         run: |
           cd ios
