--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lodash.throttle": "^4.1.1",
     "lodash.zip": "^4.2.0",
     "lodash.zipobject": "^4.1.3",
+    "meta1-vision-dex": "0.6.26-p",
     "meta1dex": "^0.6.13",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
