--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "postinstall-postinstall": "^2.1.0",
     "qrcode": "^1.4.4",
     "react": "17.0.2",
+    "react-hook-form": "^7.33.1",
     "react-native": "0.66.0",
     "react-native-blob-util": "0.16.0",
     "react-native-dotenv": "^3.3.1",
