--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/plugin-transform-shorthand-properties": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@react-native-clipboard/clipboard": "^1.9.0",
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
@@ -52,6 +53,7 @@
     "@types/lodash.zipobject": "^4.1.6",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-svg-charts": "^5.0.12",
+    "@web3auth/web3auth": "^1.2.0",
     "assert": "^2.0.0",
     "axios": "^0.27.2",
     "babel-plugin-polyfill-corejs2": "^0.3.1",
