--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -207,7 +207,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-    
+
   // If your app supports Android versions before Ice Cream Sandwich (API level 14)
   implementation 'com.facebook.fresco:animated-base-support:1.3.0'
 
@@ -242,6 +242,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation 'org.torusresearch:web3auth-android-sdk:2.4.0'
 }
 
 // Run this once to be able to run the application with BUCK
