--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@react-navigation/stack": "^6.0.9",
     "@reduxjs/toolkit": "^1.8.3",
     "@sentry/react-native": "^3.2.13",
+    "@toruslabs/react-native-web-browser": "^0.2.0",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.omit": "^4.5.6",
     "@types/lodash.throttle": "^4.1.6",
@@ -53,6 +54,7 @@
     "@types/lodash.zipobject": "^4.1.6",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-svg-charts": "^5.0.12",
+    "@web3auth/react-native-sdk": "^3.1.0",
     "@web3auth/web3auth": "^1.2.0",
     "assert": "^2.0.0",
     "axios": "^0.27.2",
