--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ NETWORK=MAIN
 # Sentry ingest dsn
 SENTRY_DSN=
 REACT_APP_API_URL=
-# FaceKI url
-FACE_KI_API_URL=
+TEST_ACCOUNT_LOGIN=
+TEST_ACCOUNT_PASSWORD=
