Routing and Sentry

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -37,12 +37,12 @@ jobs:
           cd ios
           fastlane nightly
         env:
+          NETWORK: ${{ secrets.NETWORK }}
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           DIAWI_TOKEN: ${{ secrets.DIAWI_TOKEN }}
           MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.MATCH_GIT }}
-          NETWORK: ${{ secrets.NETWORK }}
-          REACT_API_URL: ${{ secrets.REACT_APP_API_URL }}
+          SENTRY_DSN: ${{ SENTRY_DSN }}
       - name: Get Diawi URL and QR Code
         run: |
           echo ============================
