--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios --simulator=\"iPhone 11 Pro\"",
+    "ios": "react-native run-ios --device",
+    "ios:simulator": "react-native run-ios --simulator=\"iPhone 14 Pro\"",
     "ios:clean": "yarn clean; yarn ios",
     "start": "react-native start",
     "xcode": "xed -b ios",
