--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-text-input-mask": "^3.1.4",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^8.1.0",
     "react-native-vision-camera": "^2.14.0",
     "react-native-webview": "^11.14.2",
@@ -116,6 +117,7 @@
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
+    "react-devtools": "4.24",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.7.3"
