--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-plugin-polyfill-es-shims": "^0.6.1",
     "babel-plugin-polyfill-regenerator": "^0.3.1",
     "buffer": "^6.0.3",
+    "debounce": "^1.2.1",
     "events": "^3.3.0",
     "is_js": "^0.9.0",
     "lodash.get": "^4.4.2",
@@ -108,6 +109,7 @@
     "@babel/core": "^7.17.8",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^3.0.0",
+    "@types/debounce": "^1.2.1",
     "@types/jest": "^27.4.1",
     "@types/qrcode": "^1.4.1",
     "@types/react-native": "^0.65.0",
