--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "react": "17.0.2",
     "react-hook-form": "^7.33.1",
     "react-native": "0.66.4",
-    "react-native-blob-util": "0.16.0",
+    "react-native-blob-util": "^0.16.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-exception-handler": "^2.10.10",
@@ -88,11 +88,13 @@
     "react-native-image-picker": "^4.7.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-paper": "^4.12.0",
+    "react-native-pdf": "^6.6.2",
     "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "2.5.0",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
+    "react-native-signature-canvas": "^4.4.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "^5.4.0",
