--- a/ios/nativeapp.xcodeproj/xcshareddata/xcschemes/nativeapp.xcscheme
+++ b/ios/nativeapp.xcodeproj/xcshareddata/xcschemes/nativeapp.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1410"
+   LastUpgradeVersion = "1210"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "meta1wallet.app"
-               BlueprintName = "meta1wallet"
-               ReferencedContainer = "container:meta1wallet.xcodeproj">
+               BuildableName = "META1.app"
+               BlueprintName = "nativeapp"
+               ReferencedContainer = "container:nativeapp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "meta1walletTests.xctest"
-               BlueprintName = "meta1walletTests"
-               ReferencedContainer = "container:meta1wallet.xcodeproj">
+               BuildableName = "META1.xctest"
+               BlueprintName = "nativeappTests"
+               ReferencedContainer = "container:nativeapp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "meta1wallet.app"
-            BlueprintName = "meta1wallet"
-            ReferencedContainer = "container:meta1wallet.xcodeproj">
+            BuildableName = "META1.app"
+            BlueprintName = "nativeapp"
+            ReferencedContainer = "container:nativeapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "meta1wallet.app"
-            BlueprintName = "meta1wallet"
-            ReferencedContainer = "container:meta1wallet.xcodeproj">
+            BuildableName = "META1.app"
+            BlueprintName = "nativeapp"
+            ReferencedContainer = "container:nativeapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
