--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install npm dependencies
         run: |
-          yarn install
+          yarn install --frozen-lockfile
       - name: Install ruby dependencies
         run: |
           sudo gem install cocoapods
