--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# Network id MAIN or TESTNET
-NETWORK=MAIN
+# Network id META1 or META1DEV or META1DEV2 or META1TEST
+NETWORK=META1
 # Sentry ingest dsn
 SENTRY_DSN=
-REACT_APP_API_URL=
 TEST_ACCOUNT_LOGIN=
 TEST_ACCOUNT_PASSWORD=
+DIAWI_TOKEN=
