--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -266,6 +266,13 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    // For animated GIF support
+        implementation 'com.facebook.fresco:animated-gif:2.6.0'
+
+        // For WebP support, including animated WebP
+        implementation 'com.facebook.fresco:animated-webp:2.6.0'
+        implementation 'com.facebook.fresco:webpsupport:2.6.0'
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
     }
