--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-native-vision-camera": "^2.15.2",
     "react-native-webview": "^11.23.1",
     "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "stream-browserify": "^3.0.0",
     "zustand": "^4.1.4"
   },
