--- a/package.json
+++ b/package.json
@@ -123,8 +123,10 @@
     "metro-react-native-babel-preset": "0.72.3",
     "prettier": "^2.7.1",
     "react-devtools": "^4.26.1",
+    "react-native-flipper": "^0.174.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.1.0",
+    "redux-flipper": "^2.0.2",
     "typescript": "^4.8.4"
   },
   "resolutions": {
