--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "testnet:ios": "export NETWORK=TESTNET; yarn build:ios"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/checkbox": "^0.5.13",
     "@react-native-masked-view/masked-view": "^0.2.8",
