Missing purpose string in Info.plist

--- a/ios/nativeapp/Info.plist
+++ b/ios/nativeapp/Info.plist
@@ -53,7 +53,11 @@
 	<false/>
 	<key>NSCameraUsageDescription</key>
     <string>$(PRODUCT_NAME) needs access to your Camera.</string>
+  <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app requires access to the photo library.</string>
+  <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>This app requires access to the photo library.</string>
   <key>UIUserInterfaceStyle</key>
-  <string>Light</string>
+    <string>Light</string>
 </dict>
 </plist>
