--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@types/react-native": "^0.70.6",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-svg-charts": "^5.0.12",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/parser": "^5.42.0",
     "babel-jest": "^29.3.1",
