--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lodash.zip": "^4.2.0",
     "lodash.zipobject": "^4.1.3",
     "meta1-vision-dex": "^0.7.3",
+    "native-base": "^3.4.25",
     "patch-package": "^6.5.0",
     "postinstall-postinstall": "^2.1.0",
     "qrcode": "^1.5.1",
@@ -79,11 +80,11 @@
     "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "^2.12.0",
     "react-native-restart": "^0.0.24",
-    "react-native-safe-area-context": "^4.4.1",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.18.2",
     "react-native-signature-canvas": "^4.4.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.5.0",
+    "react-native-svg": "12.1.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-text-input-mask": "^3.1.4",
     "react-native-toast-message": "^2.1.5",
