--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "assert": "^2.0.0",
     "axios": "^1.2.0",
     "buffer": "^6.0.3",
+    "dayjs": "^1.11.7",
     "debounce": "^1.2.1",
     "events": "^3.3.0",
     "is_js": "^0.9.0",
