--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.2",
     "react-native-webview": "^11.23.1",
+    "react-native-zendesk-messaging": "^0.1.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "stream-browserify": "^3.0.0",
