fix: zendesk implementation

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ SENTRY_DSN=
 TEST_ACCOUNT_LOGIN=
 TEST_ACCOUNT_PASSWORD=
 DIAWI_TOKEN=
+SENTRY_AUTH_TOKEN=
+TORUS_CLIENT_ID=
+ZENDESK_CHANNEL_KEY_ANDROID=
+ZENDESK_CHANNEL_KEY_IOS=
