Remove configuration dependency of META1DEV2

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Network id META1 or META1DEV or META1DEV2 or META1TEST
+# Network id META1 or META1DEV or META1TEST
 NETWORK=META1
 # Sentry ingest dsn
 SENTRY_DSN=
