--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@web3auth/web3auth": "^2.1.3",
     "assert": "^2.0.0",
     "axios": "^1.2.0",
+    "bignumber.js": "^9.1.1",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.7",
     "debounce": "^1.2.1",
