--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "12.1.1",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-text-input-mask": "^3.1.4",
+    "react-native-text-input-mask": "3.1.4",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.2",
