Integration of Face Biometric

--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "react-native-paper": "^4.12.5",
     "react-native-pdf": "^6.6.2",
     "react-native-prompt-android": "^1.1.0",
-    "react-native-reanimated": "^2.12.0",
+    "react-native-reanimated": "^3.5.4",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.18.2",
@@ -94,6 +94,8 @@
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.2",
+    "react-native-webrtc": "^111.0.3",
+    "react-native-webrtc-web-shim": "^1.0.3",
     "react-native-webview": "^11.23.1",
     "react-native-zendesk-messaging": "^0.1.0",
     "react-redux": "^8.0.5",
