--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,11 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
+    compileOptions {
+    	sourceCompatibility JavaVersion.VERSION_1_8
+    	targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "io.meta1.appbeta"
         minSdkVersion rootProject.ext.minSdkVersion
